--- a/index.html
+++ b/index.html
@@ -5,8 +5,21 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="CSS/styles.css">
 </head>
 <body>
     <h1>Mon premier commit</h1>
+    <header>
+        <div class="wrapper">
+            <nav>
+                <ul>
+                   <li><a href="#main_image">ACCEUIL</a></li>
+                   <li><a href="#steps">DESTINATIONS</a></li>
+                   <li><a href="#possibilities">CIRCUITS</a></li>
+                   <li><a href="#contact">CONTACT</a></li>
+                </ul>
+            </nav>
+        </div>
+    </header>
 </body>
 </html>
